--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,181 @@
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
+  font-family: "Raleway", sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background-color: #f9f9f9;
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+  font-family: "Raleway", sans-serif;
+}
+
+#root {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+  width: 100vw;
+}
+
+main {
+  overflow: auto;
+  height: calc(100% - 8.5rem);
+}
+
+.app {
+  background: white;
+  height: 80vh;
+  overflow: hidden;
+  border-radius: 1rem;
+  width: 100%;
+  margin-right: auto;
+  margin-left: auto;
+  max-width: 1024px;
+  box-shadow: rgba(17, 12, 46, 0.15) 0px 48px 100px 0px;
+  border: 1px solid #e6e6e6;
+  position: relative;
+}
+
+.input-container {
+  position: sticky;
+  top: 0;
+  left: 0;
+  right: 0;
+  width: calc(100% - 2rem);
+  padding: 1rem 1rem 0 1rem;
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+  background-color: white;
+}
+
+.search-input {
+  width: 100%;
+  height: 3rem;
+  border: 0;
+  border-bottom: 1px solid #e6e6e6;
+  font-size: 20px;
+}
+
+.small {
+  width: 25%;
+}
+
+input:focus-visible {
+  outline: none;
+  border-bottom: 1px solid #000;
+}
+
+.card {
+  display: flex;
+  padding: 1rem 2rem;
+  gap: 2rem;
+  background-color: white;
+}
+
+.card .image-container {
+  border: 1px solid #e6e6e6;
+  border-radius: 100%;
+  max-height: 160px;
+  max-width: 160px;
+  overflow: hidden;
+}
+
+.card .content {
+  width: calc(100% - 12rem);
+  display: flex;
+  flex-direction: column;
+}
+
+.card .header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.card .title {
+  font-size: 42px;
+  margin: 1rem 0;
+}
+
+.card .expande {
+  font-size: 42px;
+  font-weight: 600;
+  line-height: 1;
+  padding: 0.5rem 1rem;
+  border-radius: 1rem;
+  cursor: pointer;
+  width: 40px;
+  height: 40px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border: none;
+  background-color: white;
+  font-family: "Raleway";
+}
+.card .expande:hover {
+  background: #f8f8f8;
+}
+
+.card .description {
+  display: flex;
+  flex-direction: column;
+  gap: 0.25rem;
+  margin-left: 1rem;
+}
+.expandable {
+  margin-top: 2rem;
+}
+.card .description-item {
+  margin: 0;
+  font-size: 18px;
+  font-weight: 300;
+}
+
+.tag-container {
+  margin-left: 1rem;
+  margin-top: 1rem;
+}
+
+.tag-section {
+  margin-top: 1rem;
+  margin-bottom: 1rem;
+  display: flex;
+  gap: 1rem;
+}
+.tag {
+  padding: 0.5rem 1.5rem;
+  border-radius: 0.5rem;
+  background-color: #dadada;
+}
+
+/* Responsive Media */
+
+@media (min-width: 640px) {
+  .app {
+    max-width: 640px;
+  }
+  .card {
+    max-width: 640px;
+  }
+}
+
+@media (min-width: 768px) {
+  .app {
+    max-width: 768px;
+  }
+  .card {
+    max-width: 768px;
+  }
+}
+
+@media (min-width: 1024px) {
+  .app {
+    max-width: 1024px;
+  }
+  .card {
+    max-width: 1024px;
+  }
 }
