--- a/src/index.css
+++ b/src/index.css
@@ -79,6 +79,8 @@ input:focus-visible {
   border: 1px solid #e6e6e6;
   border-radius: 100%;
   max-height: 160px;
+  min-height: 160px;
+  min-width: 160px;
   max-width: 160px;
   overflow: hidden;
 }
